kubernetes/KC/deployments/home-automation/tasmoadmin/ingress.sops.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
    name: tasmoadmin
    namespace: home-automation
    annotations:
        kubernetes.io/ingress.class: traefik-external
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:kF3zuJJQqM5DrUZnmt97F3HQqOd9N+Fg76Kqgggl,iv:zIm//xTPfs4dY+HIw2v31qXX/DTW0gC9DrT25F8D8mU=,tag:AxSmeP6sQ9UaZmlym6TSQA==,type:str]
          kind: Rule
          services:
            - name: ENC[AES256_GCM,data:n+PNpPBYupD+Zg==,iv:vbTFSC9i+Sa2iHGDkv09g9cuiwS3ngm+TA7734VAnxc=,tag:wPXFy2bzbVz/Ah2xZ2s8hQ==,type:str]
              port: ENC[AES256_GCM,data:Nng=,iv:hS7iAeaDCwy/Axk/0EzXlWol8thaeGPUA5MzvM35mx4=,tag:YQjK20v3dV7ybYHkDV7qvQ==,type:int]
    tls:
        secretName: ENC[AES256_GCM,data:VYNDIxX/oQTlDDo=,iv:+PD397eSRYbD3lBUSx0+dWiz3u85qmCelMssGbGEY3Y=,tag:qy6lLVWEqVxjOIrmdR69RQ==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA0V3NoZHA5NWdkNXcrV0xt
[...]
            kZAaCmpDvhU8FtohlP4RmZZfT+VdQHBiPOp1xuLmDA0cb3zkjh+cpw==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-05-08T22:04:26Z"
    mac: ENC[AES256_GCM,data:sUo5XkKGIvZmcMluFABILSQtk1N1mhVqH/ZCNXbKvxKOAbISifxzV9Fy2Oxye6BMbL9rOqP4O7AotepZuDITVJ3FeY95lZBT9AlfR2hL9lymQeFPiD0qkHyuMty2br6OvcYNhGSP+UVTs6wIzxHRhJG98sDseNfJN2v8v33VGkw=,iv:4eXiwhr4zjC6kPx4LfceuXt7Akre9rvpqe4FmQrnHI4=,tag:HEt82im8lyX9RR6FPK0gJA==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|secretName|services|ports|externalName|loadBalancerIP|bootstrap|k8s.v1.cni.cncf.io/networks)$
    version: 3.8.1
